sorting of the list is done

--- a/app/src/main/res/layout/activity_edit_description.xml
+++ b/app/src/main/res/layout/activity_edit_description.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="@string/name" />
 
     <EditText
         android:id="@+id/editText2"
@@ -21,19 +21,19 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="@string/name" />
     <TextView
         android:id="@+id/editText3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="Name" />
+        android:text="@string/name" />
     <TextView
         android:id="@+id/editText4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="Name" />
+        android:text="@string/name" />
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -55,5 +55,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="button"
-        android:text="Save Changes" />
+        android:text="@string/save_changes" />
 </LinearLayout>
