--- a/app/src/main/res/layout/activity_description2.xml
+++ b/app/src/main/res/layout/activity_description2.xml
@@ -38,6 +38,15 @@
         android:layout_weight="1"
         android:text="TextView"
         android:onClick="edit"/>
+    <TextView
+        android:id="@+id/textViewTims"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:textSize="20dp"
+        android:paddingLeft="10dp"
+        android:layout_weight="1"
+        android:text="TextView"
+        android:onClick="edit"/>
 
     <!--<Button-->
         <!--android:id="@+id/button2"-->
