--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,9 +10,9 @@
     android:orientation="vertical"
     android:padding="7dp">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/list_item"></ListView>
+        android:id="@+id/recyclerView"/>
 
 </LinearLayout>
