--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_margin="10dp"
-    android:backgroundTint="#d5ddc6"
+    app:cardBackgroundColor="#d5ddc6"
     app:cardCornerRadius="13dp">
 
     <android.support.constraint.ConstraintLayout
