--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/add_action_button"
-        
-        />
+        android:src="@drawable/add_action_button" />
 
 </android.support.design.widget.CoordinatorLayout>
