--- a/app/src/main/res/layout/activity_description2.xml
+++ b/app/src/main/res/layout/activity_description2.xml
@@ -7,46 +7,81 @@
     tools:context=".Description2"
     android:orientation="vertical">
 
-
+<android.support.v7.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    app:cardBackgroundColor="#f7eeee"
+    app:cardCornerRadius="18dp"
+    android:layout_gravity="center">
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:layout_marginTop="20dp"
-        android:textSize="30dp"
-        android:textColor="#0d0c0c"
-        android:layout_marginBottom="20dp"
-        android:paddingLeft="10dp"
+        android:padding="8dp"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textColor="#035120"
         android:onClick="edit"/>
+</android.support.v7.widget.CardView>
+
+<android.support.v7.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    app:cardBackgroundColor="#f7eeee"
+    app:cardCornerRadius="18dp"
+    android:layout_gravity="center">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:textSize="20dp"
-        android:paddingLeft="10dp"
-        android:layout_weight="1"
+        android:padding="16dp"
+        android:textColor="#101010"
+        android:textStyle="italic"
         android:text="TextView"
         android:onClick="edit"/>
-    <TextView
-        android:id="@+id/textView3"
+
+</android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:textSize="20dp"
-        android:paddingLeft="10dp"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:onClick="edit"/>
-    <TextView
-        android:id="@+id/textViewTims"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:textSize="20dp"
-        android:paddingLeft="10dp"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:onClick="edit"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cardBackgroundColor="#f7eeee">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:textSize="20dp"
+                android:paddingLeft="10dp"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:onClick="edit"/>
+            <TextView
+                android:id="@+id/textViewTims"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:textSize="20dp"
+                android:paddingLeft="10dp"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:onClick="edit"/>
+
+        </LinearLayout>
+
+
+    </android.support.v7.widget.CardView>
+
 
     <!--<Button-->
         <!--android:id="@+id/button2"-->
