--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,5 +6,27 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="never" >
+
+        <menu>
+            <item
+                android:id="@+id/textSize"
+                android:title="Text Size">
+
+                <menu>
+
+                    <item
+                        android:id="@+id/sizenine"
+                        android:title="Small"/>
+                    <item
+                        android:id="@+id/sizetwelve"
+                        android:title="Medium"/>
+
+                    <item
+                        android:id="@+id/sizefourteen"
+                        android:title="Large"/>
+                </menu>
+            </item>
+        </menu>
+    </item>
 </menu>
